<resources>
    <string name="app_name">Chip Counter</string>
    <string name="calculate">Calculate</string>
    <string name="total">Total: &#36;%1$d</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="counter">Counter</string>
    <string name="history">History</string>
    <string name="new_">New</string>
    <string name="totals">Totals</string>
    <string name="date">Date: %1$s</string>
    <string name="date_title">Date (dd/mm/yyyy): </string>
    <string name="spent">Spent: %1$.2f</string>
    <string name="spent_title">Spent: </string>
    <string name="won_title">Won: </string>
    <string name="won">Won: %1$.2f</string>
    <string name="ok">Ok</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_confirm">Are you sure you want to delete this entry?\nThis cannot be undone.</string>
</resources>
