<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/won_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:text="@string/won"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/spent_text"/>

    <TextView
        android:id="@+id/spent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/spent"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textStyle="bold"
        android:textSize="20sp"

        android:layout_toEndOf="@id/spent_text"/>

    <Button
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/ok"
        android:textSize="20sp"
        android:layout_below="@id/won_text"/>


</RelativeLayout>