<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/delete"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/delete_button"
        android:background="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
    </View>

    <TextView
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@id/delete_button"
        android:text="@string/edit"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_button"
        android:weightSum="1">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>