<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/parent">

    <Spinner
        android:id="@+id/history_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">
    </Spinner>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/history_spinner">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/twenty_five_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp" />

                        <EditText
                            android:id="@+id/twenty_five_value"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/twenty_five_image"
                            android:inputType="number"
                            android:textAlignment="center" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/one_hundred_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp" />

                        <EditText
                            android:id="@+id/one_hundred_value"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/one_hundred_image"
                            android:inputType="number"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/five_hundred_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp" />

                        <EditText
                            android:id="@+id/five_hundred_value"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/five_hundred_image"
                            android:inputType="number"
                            android:textAlignment="center" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/one_thousand_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp" />

                        <EditText
                            android:id="@+id/one_thousand_value"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/one_thousand_image"
                            android:inputType="number"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/five_thousand_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp" />

                        <EditText
                            android:id="@+id/five_thousand_value"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/five_thousand_image"
                            android:inputType="number"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/calculate" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>